Fix reference and conclusion vertical align

--- a/app/assets/stylesheets/pdf/bic_pdf.scss
+++ b/app/assets/stylesheets/pdf/bic_pdf.scss
@@ -14,6 +14,10 @@
   text-shadow: 1px 1px 4px #343a40;
 }
 
+.vertical-align-center {
+  display: -webkit-box;
+  -webkit-box-align: center;
+}
 .header-background-image {
   background-image: asset-data-url("bic_pdf/header-background-image.png");
   background-size: 1600px;
